--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <header>
       <h1>Welcome to the website</h1>
+      <a href='HTML_Pages/loginPage.html'>Log in here</a>
     </header>
   </body>
 </html>
