--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <header>
       <h1>Welcome to the website</h1>
     </header>
+    <p>Text</p>
     <a href='HTML_Pages/loginPage.html'>Log in here</a>
   </body>
 </html>
