--- a/HTML_Pages/signupPage.html
+++ b/HTML_Pages/signupPage.html
@@ -34,7 +34,7 @@
     </head>
     <body>
         <section style="text-align: center;">
-            <h1>Log in</h1>
+            <h1>LSign Up</h1>
             <h2>Please enter a username and password below:</h2>
             <form>
                 <label>Username</label>
