--- a/HTML_Pages/signupPage.html
+++ b/HTML_Pages/signupPage.html
@@ -2,10 +2,9 @@
 <html lang="en">
     <head>
         <title>Sign Up Page</title>
+        <link rel="stylesheet" href="cardPage.css">
 
         <style>
-            body {font-family: Arial, Helvetica, sans-serif;}
-
             input[type=text], input[type=password] {
             width: 50%;
             padding: 12px 20px;
@@ -14,37 +13,21 @@
             border: 1px solid #ccc;
             box-sizing: border-box;
             }
-
-            button {
-                background-color: #04AA6D;
-                color: white;
-                padding: 14px 20px;
-                margin: 8px 0;
-                border: none;
-                cursor: pointer;
-                width: 30%;
-                font-size: 20px;
-              }
-              
-              button:hover {
-                opacity: 0.8;
-              }
         </style>
 
     </head>
     <body>
-        <section style="text-align: center;">
-            <h1>Sign Up</h1>
-            <h2>Please enter a username and password below:</h2>
+        <h1 style="text-align: center;font-size: 40px;margin-top: 100px;">Enter a username and password below</h1>
+        <div class="card" style="padding-bottom: 20px;padding-left: 15px;padding-right: 15px;">
             <form>
-                <label>Username</label>
-                <input type="text" placeholder="Enter Username" name="uname" required> <br>
+                <p style="margin-bottom: 5px;font-size: 20px;">Username</p>
+                <input type="text" placeholder="Enter Username" name="uname" id="uname" required style="margin-top: 0px;width: 100%;border-radius: 4px;"> <br>
 
-                <label>Password</label>
-                <input type="password" placeholder="Enter Password" name="pswd" required> <br>
+                <p style="margin-bottom: 5px;font-size: 20px;">Password</p>
+                <input type="password" placeholder="Enter Password" name="pswd" id="pswd" required style="margin-top: 0px;width: 100%;border-radius: 4px;"> <br>
 
-                <button type="submit">Sign Up</button>
+                <input type="submit" value="Sign Up" style="padding: 10px;width: 100%;margin-top: 15px;margin-bottom: 20px;" class="baseButton">
             </form>
-        </section>
+        </div>
     </body>
 </html>
