--- a/HTML_Pages/adminHome.html
+++ b/HTML_Pages/adminHome.html
@@ -13,7 +13,7 @@
 <div class="grouping">
     <div class="card box">
         <p><b>Create a New Card</b></p>
-        <button class="selectButton"><a href="##" class="blankText">Create</a></button>
+        <button class="selectButton"><a href="adminCreation.html" class="blankText">Create</a></button>
     </div>
     <div class="card box">
         <p><b>Review User Cards</b></p>
@@ -24,12 +24,12 @@
 <div class="grouping">
     <div class="card box">
         <p><b>Update Existing Cards</b></p>
-        <button class="selectButton"><a href="##" class="blankText">Update</a></button>
+        <button class="selectButton"><a href="adminUpdate.html" class="blankText">Update</a></button>
     </div>
 
     <div class="card box">
         <p><b>Delete Cards</b></p>
-        <button class="selectButton"><a href="##" class="blankText">Delete</a></button>
+        <button class="selectButton"><a href="adminDelete.html" class="blankText">Delete</a></button>
     </div>
 </div>
 
