--- a/HTML_Pages/adminDelete.html
+++ b/HTML_Pages/adminDelete.html
@@ -8,7 +8,7 @@
 
     <body style="text-align: center;">
         <div class="buttonGroup">
-            <button class="smallButton baseButton"><a href="homePage.html" class="blankTextWhite">Home</a></button>
+            <button class="smallButton baseButton"><a href="adminHome.html" class="blankTextWhite">Home</a></button>
         </div>
 
 
