--- a/HTML_Pages/adminReview.html
+++ b/HTML_Pages/adminReview.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="cardPage.css">
-        <title>Truth</title>
+        <title>Admin Review</title>
     </head>
 
     <body>
         <div class="buttonGroup">
-            <button class="smallButton baseButton"><a href="homePage.html" class="blankText">Home</a></button>
+            <button class="smallButton baseButton"><a href="adminHome.html" class="blankText">Home</a></button>
         </div>
 
 
