--- a/HTML_Pages/adminCreation.html
+++ b/HTML_Pages/adminCreation.html
@@ -15,7 +15,7 @@
         <div class="card">
             <p style="opacity: 70%;">Fill out the fields below to create a card.</p>
 
-            <form action="thanks.html">
+            <form action="adminThanks.html">
                 <label style="font-size: 20px;">Select the Card Type:</label>
                 <br>
                 <select id="game" name="game" onchange="changeDisplay()" required class="selector">
