connected login and registration page to db

--- a/HTML_Pages/loginPage.html
+++ b/HTML_Pages/loginPage.html
@@ -20,16 +20,33 @@
             <div class="card" style="padding-bottom: 20px;padding-left: 15px;padding-right: 15px;">
                 <form>
                     <p style="margin-bottom: 5px;font-size: 20px;">Username</p>
-                    <input type="text" placeholder="Enter Username" name="uname" id="uname" required style="margin-top: 0px;width: 100%;border-radius: 4px;"> <br>
+                    <input id="username" type="text" placeholder="Enter Username" name="uname" id="uname" required style="margin-top: 0px;width: 100%;border-radius: 4px;"> <br>
 
                     <p style="margin-bottom: 5px;font-size: 20px;">Password</p>
-                    <input type="password" placeholder="Enter Password" name="pswd" id="pswd" required style="margin-top: 0px;width: 100%;border-radius: 4px;"> <br>
+                    <input id="password" type="password" placeholder="Enter Password" name="pswd" id="pswd" required style="margin-top: 0px;width: 100%;border-radius: 4px;"> <br>
 
-                    <input type="submit" value="Login" style="padding: 10px;width: 100%;margin-top: 15px;margin-bottom: 20px;" class="baseButton">
+                    <!-- <input type="submit" value="Login" style="padding: 10px;width: 100%;margin-top: 15px;margin-bottom: 20px;" class="baseButton"> -->
+                    <button style="padding: 10px;width: 100%;margin-top: 15px;margin-bottom: 20px;" type="button" class="baseButton" onclick="checkUser()">Login</button>
                 </form>
 
                 <a href="signupPage.html" style="color: black;">Create Account?</a><br>
 
+                <script>
+                    async function checkUser() {
+                        const username = document.getElementById('username').value;
+                        const pass = document.getElementById('password').value;
+                        const response = await fetch(`http://localhost:8080/users/${username}/${pass}`);
+
+                        const data = await response.json();
+                        const user = data[0];
+
+                        if (user) {
+                            window.location.href = '/partyGame/HTML_Pages/homePage.html';
+                        } else {
+                            alert("Incorrect username or password.");
+                        }
+                    }
+                </script>
             </div>
     </body>
 </html>
