Tweaked some functionalities, added some CSS, and implemented persistent account functionalites.

--- a/HTML_Pages/adminReview.html
+++ b/HTML_Pages/adminReview.html
@@ -103,14 +103,16 @@
                             "text2": opt2
                         })
                     })
+
+                    await denySubmission();
+
                     if (response.ok){
                         alert("Successfully created card!")
                     } else {
                         alert("Card creation failed.")
                     }
 
-                    await denySubmission();
-                    window.location.href = 'adminReview.html'
+                    location.reload();
                 }
             </script>
         </div>
